5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1578_1327.log
== TEST (2019-03-13 13:21:48) 
-- CODE:
a = 90
b = 55
print(a-b)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:21:48) 
-- CODE:
a = 90
b = 55
print(a - b)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:21:48) 
-- CODE:
a = 90
b = 55
print(ab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:48) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.164493
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:48) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.175454
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.174987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.171441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.164124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.201451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.152663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.147317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.148987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:49) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.136365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:50) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.160369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:50) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.145495
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:50) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.131501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:21:50) 
-- CODE:
a = 90
b = 55
print(ab)
-- EXECUTION TIME:
0.142503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1327/main.py", line 3, in <module>
    print(ab)
NameError: name 'ab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:22:18) 
-- CODE:
a = 90
b = 55
print(a-b)
-- EXECUTION TIME:
0.189742
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:58:48) 
-- CODE:
a = 90
b = 55
print(a-b)
-- EXECUTION TIME:
0.131329
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
